--- a/AdminCore_Entity/AdminCore_Entity.csproj
+++ b/AdminCore_Entity/AdminCore_Entity.csproj
@@ -8,4 +8,17 @@
     <Folder Include="SystemSet\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AdminCore_Comm\AdminCore_Comm.csproj" />
+  </ItemGroup>
+
 </Project>
