添加单元测试

--- a/AdminCore_Web/appsettings.json
+++ b/AdminCore_Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServerConnection": "Data Source=.;Initial Catalog=CRM;Integrated Security=True"
+    "SqlServerConnection": "Data Source=.;Initial Catalog=AdminCore;Persist Security Info=True;User ID=sa;Password=8023"
   },
   "Logging": {
     "LogLevel": {
